# entity/user.go
@@ -1,0 +1,7 @@
+package entity
+
+type User struct {
+	ID       string `json:"-"`
+	Login    string `json:"username"`
+	Password string `json:"password"`
+}
