# http/http.go
@@ -1,133 +1,28 @@
 package http
 
 import (
-	"HomeWork1/entity"
+	"HomeWork1/http/handlers"
+	"HomeWork1/storage"
 	"github.com/gin-gonic/gin"
-	"github.com/google/uuid"
 	swaggerFiles "github.com/swaggo/files"
 	ginSwagger "github.com/swaggo/gin-swagger"
-	"net/http"
-	"time"
 )
 
-type Storage interface {
-	Get(key string) (*entity.Task, error)
-	Put(key string, val entity.Task) error
-	Post(key string, value entity.Task) error
-	Delete(key string) error
-}
-
-type Server struct {
-	storage Storage
-}
-
-func NewServer(storage Storage) *Server {
-	return &Server{storage: storage}
-}
-
-// @Summary Post task
-// @Tags Task
-// @Description Creates a task
-// @Success 201
-// @Failure 400
-// @Router /task [post]
-func (s *Server) postHandler(ctx *gin.Context) {
-	newUUID := uuid.New()
-	err := s.storage.Post(newUUID.String(), entity.Task{
-		Status: "in_progress",
-		Result: "",
-	})
-	if err != nil {
-		ctx.JSON(http.StatusBadRequest, gin.H{
-			"error": err.Error(),
-		})
-		return
-	}
-	ctx.Status(http.StatusCreated)
-	ctx.JSON(http.StatusCreated, gin.H{
-		"task_id": newUUID.String(),
-	})
-
-	time.Sleep(5 * time.Second)
-	err = s.storage.Put(newUUID.String(), entity.Task{
-		Status: "ready",
-		Result: "Task result",
-	})
-	if err != nil {
-		ctx.JSON(http.StatusBadRequest, gin.H{
-			"error": err.Error(),
-		})
-		return
-	}
-}
-
-// @Summary Get Status
-// @Tags Task
-// @Description Get the status of the ongoing task
-// @Param task_id path string true "ID of the task"
-// @Produce json
-// @Success 200
-// @Failure 400
-// @Router /status/{task_id} [get]
-func (s *Server) statusHandler(ctx *gin.Context) {
-	taskID := ctx.Param("task_id")
-	value, err := s.storage.Get(taskID)
-	if err != nil {
-		ctx.JSON(http.StatusNotFound, gin.H{
-			"error": err.Error(),
-		})
-		return
-	}
-	if value != nil {
-		ctx.JSON(http.StatusOK, gin.H{
-			"status": value.Status,
-		})
-	} else {
-		ctx.JSON(http.StatusBadRequest, gin.H{
-			"error": "There is no value",
-		})
-		return
-	}
-}
-
-// @Summary Get Result
-// @Tags Task
-// @Description Get the result of the task by its id
-// @Param task_id path string true "ID of the task"
-// @Produce json
-// @Success 200
-// @Failure 400
-// @Router /result/{task_id} [get]
-func (s *Server) resultHandler(ctx *gin.Context) {
-	taskID := ctx.Param("task_id")
-	value, err := s.storage.Get(taskID)
-	if err != nil {
-		ctx.JSON(http.StatusNotFound, gin.H{
-			"error": err.Error(),
-		})
-		return
-	}
-	if value != nil {
-		ctx.JSON(http.StatusOK, gin.H{
-			"result": value.Result,
-		})
-	} else {
-		ctx.JSON(http.StatusBadRequest, gin.H{
-			"error": "There is no value",
-		})
-		return
-	}
-}
-
-func CreateAndRunServer(storage Storage, addr string) error {
-	server := NewServer(storage)
+func CreateAndRunTaskServer(addr string, taskStorage storage.RamStorage, userStorage storage.UserStorage) error {
+	taskServer := handlers.NewTaskServer(taskStorage)
+	userServer := handlers.NewUserServer(userStorage)
 	router := gin.Default()
 
 	router.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
 
-	router.POST("/task", server.postHandler)
-	router.GET("/status/:task_id", server.statusHandler)
-	router.GET("/result/:task_id", server.resultHandler)
+	// Task handlers
+	router.POST("/task", taskServer.PostHandler)
+	router.GET("/status/:task_id", taskServer.StatusHandler)
+	router.GET("/result/:task_id", taskServer.ResultHandler)
+
+	// Auth handlers
+	router.POST("/register", userServer.RegisterHandler)
+	router.POST("/login", userServer.LoginHandler)
 
 	err := router.Run(addr)
 	if err != nil {
